# comm-common

./: Cargo.toml  README.md  config.toml  test.sh  translations.yml
.github/workflows/: rust.yml
src/: auth.rs  config.rs  credentials.rs  credetials.rs  error.rs  jwt.rs  lib.rs  session.rs  templates.rs  translations.rs  types.rs
src/templates/: credentials.html  expired.html  login.html  not_found.html
src/translations/: nl.yml
templates/: base.html  credentials.html
