[package]
name = "id-contact-comm-common"
authors = ["Henk Dieter Oordt <hd@oordt.dev>"]
version = "0.1.0"
edition = "2018"

[features]
auth_during_comm = []
platform_token = []
session_db = ["platform_token"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
josekit = "0.7.1"
rocket = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = "1.0.123"
serde_json = "1.0.61"
thiserror = "1.0.24"
postgres = "0.19.0"
reqwest = {version = "0.11.3", features = ["json"]}
strum = "0.20.0"
strum_macros = "0.20.1"
rand = "0.8.3"
