[package]
name = "id-contact-comm-common"
authors = ["Henk Dieter Oordt <hd@oordt.dev>"]
version = "0.1.0"
edition = "2018"

[features]
auth_during_comm = []
platform_token = []
session_db = ["platform_token"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
josekit = "0.7.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["postgres_pool"] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.25"
postgres = "0.19.1"
reqwest = { version = "0.11.3", features = ["json"] }
strum = "0.21.0"
strum_macros = "0.21.1"
rand = "0.8.4"
